# AgentDir

./: !_SOVEREIGN.md  .agentdir.md  .dockerignore  .env.secure.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sovereign  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SOVEREIGN_DASHBOARD.md  START_ACHII.bat  SYSTEM_STATUS.md  a2a_protocol.py  agent_core.py  anchor_manager.py  auth_service.py  build_release.ps1  cli.py  cli_theme.py  config.json  config.json.backup  config_manager.py  docker-compose.secure.yml  docker-compose.sovereign.yml  docker-compose.yml  docker-entrypoint-35.sh  docker-entrypoint.sh  docker-stack.yml  evolution_engine.py  evolution_log.py  file_parser.py  hooks.py  install.ps1  install.sh  launch_sovereign.ps1  llm_client.py  (+19 more)
.achii/: state.json
.prompts/: analyzer.md  auditor.md  coder.md  orchestrator.md  origin_story.md
achii_project/: achii_core.py
agent_core/: __init__.py  anchor_manager.py  logical_validator.py  omninode_router.py  orchestrator.py
completions/: README.md  agentdir.bash  agentdir.fish  agentdir.zsh
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: fs_handler.rs  gatekeeper.rs  local_ai.rs  main.rs  scaffolding.rs
docs/: 00_PROMPT_MASTER.md  01_ROLE_AND_IDENTITY.md  02_CONTEXT_RULES.md  03_REASONING_PROTOCOL.md  04_OUTPUT_FORMATS.md  05_CONSTRAINTS.md  06_ITERATION_GUIDE.md  07_META_PROMPTS.md  08_FEW_SHOT_EXAMPLES.md  09_QUICK_REFERENCE.md  AGENTDIR_LIVE_CONTEXT.md  AGENTDIR_PHASE2_PROMPT.md  SOVEREIGN_ANCHOR.md  SOVEREIGN_ELEVATION_PROMPT.md  Sovereign_Engine_Blueprint_APA7.md  USB_COMPUTING.md  agentdir_35_master_prompt.md
landing/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
mobile/: .gitignore  App.tsx  README.md  VIEWPORT_SYNC.md  app.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
outputs/: agent_print_0A922FA1.json  agent_print_0A922FA1.md  agent_print_0A922FA1.txt  agent_print_19b7586a.json  agent_print_19b7586a.md  agent_print_21e23b37.json  agent_print_21e23b37.md  agent_print_27c8a06b.json  agent_print_27c8a06b.md  agent_print_2c1235e3.json  agent_print_2c1235e3.md  agent_print_40d60a80.json  agent_print_40d60a80.md  agent_print_6a286ae5.json  (+22 more)
wiki/: log.md  (+1 more)
(+159 files in other folders)
