[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdir"
version = "4.0.0"
description = "Elävä tiedostojärjestelmä-agentti (Inbox → LLM → Outbox)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "watchdog>=4.0.0",
  "requests>=2.31.0",
  "httpx>=0.27.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "pypdf>=4.0.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.0",
  "itsdangerous>=2.0.0",
  "zeroconf>=0.131.0",
]

[project.optional-dependencies]
ocr = [
  "pdf2image>=1.17.0",
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
agentdir = "cli:main"
agentdir-watcher = "watcher:main"
agentdir-server = "server:main"

[tool.setuptools]
py-modules = [
  "watcher",
  "server",
  "config_manager",
  "rag_memory",
  "llm_client",
  "file_parser",
  "sandbox_executor",
  "swarm_manager",
  "evolution_engine",
  "ui_routes",
  "verify_setup",
  "hooks",
  "agent_core",
  "evolution_log",
  "cli",
  "cli_theme",
  "mcp_server",
  "omninode",
  "prompt_manager",
  "orchestrator",
  "anchor_manager",
  "auth_service",
]
