[package]
name = "agentdir-desktop"
version = "1.0.0"
description = "AgentDir Web-UI desktop shell"
authors = ["AgentDir"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
