[package]
name = "agentdir-desktop"
version = "4.1.0"
description = "AgentDir × Achii Sovereign Engine — Tauri desktop shell with Rust gatekeeper"
authors = ["AgentDir"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
thiserror = "1"
regex = "1"
walkdir = "2"
log = "0.4"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
